Create perceptual loss with same weights as pytorch

--- a/notebooks/model/vq-gan/vq-gan.ipynb
+++ b/notebooks/model/vq-gan/vq-gan.ipynb
@@ -51,6 +51,67 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "926dc36f-d3ed-4be8-9d1d-b70de1917ab8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ganime.model.vqgan.losses.lpips import LPIPS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "791a7945-7c4c-451d-ac3a-328d04684392",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = LPIPS()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "d9b7e1ee-403f-486b-9300-9f6eeb4025d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.0010818949"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss.model.layers[-1].weights[0].numpy().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "4a4a130c-4bfa-4cba-9d9c-8ffadafbca87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(0.49456352, shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss = LPIPS()\n",
+    "loss_res = loss(tf.zeros((1, 64, 64, 3), dtype=tf.float32), tf.ones((1, 64, 64, 3), dtype=tf.float32))\n",
+    "print(loss_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "ed032479-6166-4ab9-8b49-ded5998344ca",
    "metadata": {},
    "outputs": [],
@@ -613,8 +674,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "dfe5f3dd-d870-4833-8e12-a5cf47c612d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.applications.vgg16 import VGG16\n",
+    "vgg = VGG16(weights='imagenet', include_top=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "812fad95-1560-464e-94aa-a7c69e3f9da9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"vgg16\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_3 (InputLayer)        [(None, None, None, 3)]   0         \n",
+      "                                                                 \n",
+      " block1_conv1 (Conv2D)       (None, None, None, 64)    1792      \n",
+      "                                                                 \n",
+      " block1_conv2 (Conv2D)       (None, None, None, 64)    36928     \n",
+      "                                                                 \n",
+      " block1_pool (MaxPooling2D)  (None, None, None, 64)    0         \n",
+      "                                                                 \n",
+      " block2_conv1 (Conv2D)       (None, None, None, 128)   73856     \n",
+      "                                                                 \n",
+      " block2_conv2 (Conv2D)       (None, None, None, 128)   147584    \n",
+      "                                                                 \n",
+      " block2_pool (MaxPooling2D)  (None, None, None, 128)   0         \n",
+      "                                                                 \n",
+      " block3_conv1 (Conv2D)       (None, None, None, 256)   295168    \n",
+      "                                                                 \n",
+      " block3_conv2 (Conv2D)       (None, None, None, 256)   590080    \n",
+      "                                                                 \n",
+      " block3_conv3 (Conv2D)       (None, None, None, 256)   590080    \n",
+      "                                                                 \n",
+      " block3_pool (MaxPooling2D)  (None, None, None, 256)   0         \n",
+      "                                                                 \n",
+      " block4_conv1 (Conv2D)       (None, None, None, 512)   1180160   \n",
+      "                                                                 \n",
+      " block4_conv2 (Conv2D)       (None, None, None, 512)   2359808   \n",
+      "                                                                 \n",
+      " block4_conv3 (Conv2D)       (None, None, None, 512)   2359808   \n",
+      "                                                                 \n",
+      " block4_pool (MaxPooling2D)  (None, None, None, 512)   0         \n",
+      "                                                                 \n",
+      " block5_conv1 (Conv2D)       (None, None, None, 512)   2359808   \n",
+      "                                                                 \n",
+      " block5_conv2 (Conv2D)       (None, None, None, 512)   2359808   \n",
+      "                                                                 \n",
+      " block5_conv3 (Conv2D)       (None, None, None, 512)   2359808   \n",
+      "                                                                 \n",
+      " block5_pool (MaxPooling2D)  (None, None, None, 512)   0         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 14,714,688\n",
+      "Trainable params: 14,714,688\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "vgg.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c17a986-872c-4f1f-b09d-af9f6e017b4b",
    "metadata": {},
    "outputs": [],
    "source": []
