Test transformer with larger model

--- a/notebooks/model/vq-gan/test_tfrecord.ipynb
+++ b/notebooks/model/vq-gan/test_tfrecord.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2e5832b4-d402-4b11-88f0-eceff0702222",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6cdcf163-d736-4225-8fdc-ca8b8298ed24",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "2b04bd09-dbd0-4417-9e53-39d4af819453",
    "metadata": {},
    "outputs": [],
@@ -49,17 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "542c0c07-9bd8-46b0-8fe4-6f23fed10569",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([200000, 64, 64, 3])"
+       "TensorShape([10000, 20, 64, 64, 3])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,35 +68,35 @@
     "data = np.load(\"../../../data/moving_mnist/mnist_test_seq.npy\")\n",
     "data = np.moveaxis(data, 0, 1)\n",
     "data = tf.stack([data, data, data], axis=-1)\n",
-    "data = tf.reshape(data, (-1, 64, 64, 3))\n",
+    "#data = tf.reshape(data, (-1, 64, 64, 3))\n",
     "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "2b1098e2-7d6e-447d-9d43-3ae3f377f59a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ganime.data.experimental import ImageDataset"
+    "from ganime.data.experimental import VideoDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "aa03c438-06fe-4ce8-93dd-525c2a5d1924",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9707f32cdd1740d49172b6a9678925c8",
+       "model_id": "4beee30042a84ba4b96e7757547abd45",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/200000 [00:00<?, ?it/s]"
+       "  0%|          | 0/10000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -106,13 +106,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating 24 files with 8334 elements each.\n"
+      "Creating 24 files with 417 elements each.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38ff40c6894e4e0c9af9298c819b40c1",
+       "model_id": "4978f16dc7554cb0a8037c1ce8329aa2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,12 +128,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Wrote 200000 elements to TFRecord\n"
+      "Wrote 10000 elements to TFRecord\n"
      ]
     }
    ],
    "source": [
-    "ImageDataset.write_to_tfr(data, out_dir=\"../../../data/mnist_tfrecords\", filename=\"mnist\")"
+    "VideoDataset.write_to_tfr(data, out_dir=\"../../../data/moving_mnist_tfrecords\", filename=\"moving_mnist\")"
    ]
   },
   {
