--- a/notebooks/model/vq-gan/vq-gan.ipynb
+++ b/notebooks/model/vq-gan/vq-gan.ipynb
@@ -449,9 +449,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "GANime",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ganime"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
