--- a/notebooks/model/vq-gan/min_gpt-huggingface.ipynb
+++ b/notebooks/model/vq-gan/min_gpt-huggingface.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import os\n",
     "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"   # see issue #152\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\""
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0,1\""
    ]
   },
   {
@@ -26,6 +26,33 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "26560bda-1820-4103-87af-2da6c3877fbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Mixed precision compatibility check (mixed_float16): OK\n",
+      "Your GPUs will likely run quickly with dtype policy mixed_float16 as they all have compute capability of at least 7.0\n",
+      "Compute dtype: float16\n",
+      "Variable dtype: float32\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from tensorflow.keras import mixed_precision\n",
+    "\n",
+    "policy = mixed_precision.Policy('mixed_float16')\n",
+    "mixed_precision.set_global_policy(policy)\n",
+    "print('Compute dtype: %s' % policy.compute_dtype)\n",
+    "print('Variable dtype: %s' % policy.variable_dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "277a395f-1f54-4d91-be02-214f698f0c31",
    "metadata": {},
    "outputs": [],
@@ -37,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7f01a67a-1183-424a-8eda-986b6be4173c",
    "metadata": {},
    "outputs": [
@@ -45,9 +72,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-06 16:00:34.025679: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-06-07 03:59:12.775019: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-06-06 16:00:34.400237: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 14252 MB memory:  -> device: 0, name: NVIDIA RTX A4000, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+      "2022-06-07 03:59:13.489703: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 14252 MB memory:  -> device: 0, name: NVIDIA RTX A4000, pci bus id: 0000:01:00.0, compute capability: 8.6\n",
+      "2022-06-07 03:59:13.490701: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:1 with 14252 MB memory:  -> device: 1, name: NVIDIA RTX A4000, pci bus id: 0000:25:00.0, compute capability: 8.6\n"
      ]
     }
    ],
@@ -69,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "64804403-13f9-4157-9dbb-757df9448525",
    "metadata": {},
    "outputs": [
@@ -77,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:GPU:0',)\n"
+      "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:GPU:0', '/job:localhost/replica:0/task:0/device:GPU:1')\n"
      ]
     }
    ],
@@ -87,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b530068b-b80a-4553-b0bb-5ec609da7c4e",
    "metadata": {},
    "outputs": [],
@@ -99,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d0216592-8406-46fe-b5c9-bfb39ce04b23",
    "metadata": {},
    "outputs": [],
@@ -110,14 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "cb1ac55d-561c-4b99-92c9-f92547e4cdfc",
    "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess(element):\n",
     "    element = tf.reshape(element, (tf.shape(element)[0], tf.shape(element)[1], tf.shape(element)[2], 3))\n",
-    "    element = tf.cast(element, tf.float32) / 255.0\n",
+    "    element = tf.cast(element, policy.compute_dtype) / 255.0\n",
     "    first_frame = element[0:1,...]\n",
     "    last_frame = element[-1:,...]\n",
     "    \n",
@@ -130,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "293f1357-eb57-4561-9f54-c10912f1dd67",
    "metadata": {},
    "outputs": [],
@@ -141,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "4b06c992-9332-4690-b5d3-0deb9de24c10",
    "metadata": {},
    "outputs": [],
@@ -153,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "6bf5e800-4917-4873-bfe5-bf6a69ab3d93",
    "metadata": {},
    "outputs": [],
@@ -165,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "210fd67e-fc3a-4f1b-a4b9-7c19a8032940",
    "metadata": {},
    "outputs": [],
@@ -176,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "036a1a00-817c-4e76-8d13-d1b926ae9561",
    "metadata": {},
    "outputs": [
@@ -186,7 +214,7 @@
        "array([20, 20, 20, 20, 20, 20, 20, 20], dtype=int32)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "4aa7cedb-d229-415e-9162-b4ac9dc89fc5",
    "metadata": {},
    "outputs": [],
@@ -220,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "92b4a1d3-8c67-458d-ad52-ecab8390438c",
    "metadata": {},
    "outputs": [],
@@ -230,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "66be9456-796e-4618-8ed2-26257f58773f",
    "metadata": {
     "tags": []
@@ -247,8 +275,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-06 16:00:39.890880: I tensorflow/stream_executor/cuda/cuda_dnn.cc:366] Loaded cuDNN version 8101\n",
-      "2022-06-06 16:00:41.056660: I tensorflow/stream_executor/cuda/cuda_blas.cc:1774] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n"
+      "2022-06-07 03:59:17.858453: I tensorflow/stream_executor/cuda/cuda_dnn.cc:366] Loaded cuDNN version 8101\n"
      ]
     },
     {
@@ -262,7 +289,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-06 16:00:41.959608: W tensorflow/python/util/util.cc:368] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n",
+      "2022-06-07 03:59:19.915033: W tensorflow/python/util/util.cc:368] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n",
       "All model checkpoint layers were used when initializing TFGPT2Model.\n",
       "\n",
       "All the layers of TFGPT2Model were initialized from the model checkpoint at gpt2.\n",
@@ -278,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "0aa12dd2-20a1-4760-b392-9f10eb3476a3",
    "metadata": {},
    "outputs": [],
@@ -295,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "da5313ea-35c7-4f99-9413-10ed7771ef8d",
    "metadata": {},
    "outputs": [
@@ -303,7 +330,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPU memory occupied: 5513 MB.\n"
+      "GPU memory occupied: 3593 MB.\n"
      ]
     }
    ],
@@ -313,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "da5dd8b1-39db-4d97-bc84-6ae46631a646",
    "metadata": {},
    "outputs": [
@@ -331,16 +358,17 @@
       "/home/abdalla/GANime/venv/lib/python3.8/site-packages/tensorflow/python/framework/indexed_slices.py:448: UserWarning: Converting sparse IndexedSlices(IndexedSlices(indices=Tensor(\"while/PartitionedCall:4\", shape=(None,), dtype=int32), values=Tensor(\"while/PartitionedCall:3\", shape=(None, 768), dtype=float32), dense_shape=Tensor(\"while/PartitionedCall:5\", shape=(2,), dtype=int32))) to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
       "  warnings.warn(\n",
       "/home/abdalla/GANime/venv/lib/python3.8/site-packages/tensorflow/python/framework/indexed_slices.py:448: UserWarning: Converting sparse IndexedSlices(IndexedSlices(indices=Tensor(\"while/PartitionedCall:1\", shape=(None,), dtype=int64), values=Tensor(\"while/PartitionedCall:0\", shape=(None, 768), dtype=float32), dense_shape=Tensor(\"while/PartitionedCall:2\", shape=(2,), dtype=int32))) to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
-      "  warnings.warn(\n"
+      "  warnings.warn(\n",
+      "2022-06-07 03:59:39.606740: I tensorflow/stream_executor/cuda/cuda_blas.cc:1774] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50/50 [==============================] - 123s 2s/step - loss: 446.0566\n",
+      "50/50 [==============================] - 98s 2s/step - loss: 454.1327\n",
       "Epoch 2/2\n",
-      " 4/50 [=>............................] - ETA: 1:41 - loss: 139.9361"
+      "12/50 [======>.......................] - ETA: 1:01 - loss: 153.9749"
      ]
     },
     {
@@ -350,7 +378,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_ds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msteps_per_epoch\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m50\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [20]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_ds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msteps_per_epoch\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m50\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/GANime/venv/lib/python3.8/site-packages/keras/utils/traceback_utils.py:64\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     62\u001b[0m filtered_tb \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 64\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:  \u001b[38;5;66;03m# pylint: disable=broad-except\u001b[39;00m\n\u001b[1;32m     66\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n",
       "File \u001b[0;32m~/GANime/venv/lib/python3.8/site-packages/keras/engine/training.py:1216\u001b[0m, in \u001b[0;36mModel.fit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_batch_size, validation_freq, max_queue_size, workers, use_multiprocessing)\u001b[0m\n\u001b[1;32m   1209\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tf\u001b[38;5;241m.\u001b[39mprofiler\u001b[38;5;241m.\u001b[39mexperimental\u001b[38;5;241m.\u001b[39mTrace(\n\u001b[1;32m   1210\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m   1211\u001b[0m     epoch_num\u001b[38;5;241m=\u001b[39mepoch,\n\u001b[1;32m   1212\u001b[0m     step_num\u001b[38;5;241m=\u001b[39mstep,\n\u001b[1;32m   1213\u001b[0m     batch_size\u001b[38;5;241m=\u001b[39mbatch_size,\n\u001b[1;32m   1214\u001b[0m     _r\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m   1215\u001b[0m   callbacks\u001b[38;5;241m.\u001b[39mon_train_batch_begin(step)\n\u001b[0;32m-> 1216\u001b[0m   tmp_logs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43miterator\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1217\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m data_handler\u001b[38;5;241m.\u001b[39mshould_sync:\n\u001b[1;32m   1218\u001b[0m     context\u001b[38;5;241m.\u001b[39masync_wait()\n",
       "File \u001b[0;32m~/GANime/venv/lib/python3.8/site-packages/tensorflow/python/util/traceback_utils.py:150\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    148\u001b[0m filtered_tb \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    149\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 150\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n",
@@ -366,104 +394,6 @@
    ],
    "source": [
     "model.fit(train_ds, steps_per_epoch=50, epochs=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2172e6f0-2a2f-4798-8529-6b8e685677a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#model.train_step(train_sample_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "a3509b0f-6272-4dbd-bfdb-d9aa0cb7d958",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GPU memory occupied: 9609 MB.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_gpu_utilization()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dcc0c64b-40e1-4e37-ab9a-dcb671f7a1be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36b6c2ca-23c1-42c2-a326-8fd594fe0e13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generated_logits = model.process_video(train_sample_data[\"video\"], train_sample_data[\"n_frames\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8011397a-adc5-42b6-aa54-8ad03eccf751",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generated_video = [model.get_image(logits, shape=(32, 8, 8, 128)) for logits in generated_logits]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f22ec99d-0d4d-45ad-bf48-9e1152f15a36",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display_videos(tf.stack(generated_video, axis=1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68b6881b-1133-4a22-b8bc-e66b32e99e02",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_quant, target_indices = model.encode_to_z(train_sample_data[\"video\"][:, 0,...])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0929e009-fffc-4bd8-82d9-2638479402c1",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "target_indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b995cbd6-0097-4dfc-ab83-039584c56732",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generated_logits"
    ]
   },
   {
