[WIP] Changes vqgan intermediate layer to float32 for mixed_precision

--- a/notebooks/model/vq-gan/test_tfrecord.ipynb
+++ b/notebooks/model/vq-gan/test_tfrecord.ipynb
@@ -49,17 +49,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "542c0c07-9bd8-46b0-8fe4-6f23fed10569",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-06-14 05:22:23.041299: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2022-06-14 05:22:23.412151: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 22310 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:a1:00.0, compute capability: 8.6\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "TensorShape([10000, 20, 64, 64, 3])"
+       "TensorShape([200000, 64, 64, 3])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,35 +77,35 @@
     "data = np.load(\"../../../data/moving_mnist/mnist_test_seq.npy\")\n",
     "data = np.moveaxis(data, 0, 1)\n",
     "data = tf.stack([data, data, data], axis=-1)\n",
-    "#data = tf.reshape(data, (-1, 64, 64, 3))\n",
+    "data = tf.reshape(data, (-1, 64, 64, 3))\n",
     "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2b1098e2-7d6e-447d-9d43-3ae3f377f59a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ganime.data.experimental import VideoDataset"
+    "from ganime.data.experimental import ImageDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "aa03c438-06fe-4ce8-93dd-525c2a5d1924",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4beee30042a84ba4b96e7757547abd45",
+       "model_id": "293c3e65b34442a19f639029504fd056",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/10000 [00:00<?, ?it/s]"
+       "  0%|          | 0/200000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -106,13 +115,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating 24 files with 417 elements each.\n"
+      "Creating 24 files with 8334 elements each.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4978f16dc7554cb0a8037c1ce8329aa2",
+       "model_id": "643728b912494bc3b938fbe58ada63e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,12 +137,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Wrote 10000 elements to TFRecord\n"
+      "Wrote 200000 elements to TFRecord\n"
      ]
     }
    ],
    "source": [
-    "VideoDataset.write_to_tfr(data, out_dir=\"../../../data/moving_mnist_tfrecords\", filename=\"moving_mnist\")"
+    "ImageDataset.write_to_tfr(data, out_dir=\"../../../data/mnist_tfrecords\", filename=\"mnist\")"
    ]
   },
   {
@@ -142,7 +151,48 @@
    "id": "4eede51a-690b-41bf-9a02-54c2fb7634de",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = np.load(\"../../../data/moving_mnist/mnist_test_seq.npy\")\n",
+    "data = np.moveaxis(data, 0, 1)\n",
+    "data = tf.stack([data, data, data], axis=-1)\n",
+    "#data = tf.reshape(data, (-1, 64, 64, 3))\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "eda88d02-79a4-4e17-a079-4fc29198e60b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ganime.data.experimental import VideoDataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31d71722-a735-4f65-90e5-a93719aba98c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "293c3e65b34442a19f639029504fd056",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/200000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "VideoDataset.write_to_tfr(data, out_dir=\"../../../data/mnist_tfrecords\", filename=\"mnist\")"
+   ]
   }
  ],
  "metadata": {
