Give n_previous frames to the model instead of 1

--- a/notebooks/model/vq-gan/min_gpt-huggingface.ipynb
+++ b/notebooks/model/vq-gan/min_gpt-huggingface.ipynb
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "da5dd8b1-39db-4d97-bc84-6ae46631a646",
    "metadata": {
     "tags": []
@@ -943,8 +943,168 @@
       "Epoch 24/100\n",
       "68/68 [==============================] - 73s 1s/step - total_loss: 1.0753 - scce_loss: 0.8527 - perceptual_loss: 0.2226 - val_total_loss: 1.1316 - val_scce_loss: 0.9163 - val_perceptual_loss: 0.2152\n",
       "Epoch 25/100\n",
-      "68/68 [==============================] - ETA: 0s - total_loss: 1.0313 - scce_loss: 0.8156 - perceptual_loss: 0.2157"
+      "68/68 [==============================] - 73s 1s/step - total_loss: 1.0313 - scce_loss: 0.8156 - perceptual_loss: 0.2157 - val_total_loss: 1.0547 - val_scce_loss: 0.8221 - val_perceptual_loss: 0.2326\n",
+      "Epoch 26/100\n",
+      "68/68 [==============================] - 58s 856ms/step - total_loss: 1.0409 - scce_loss: 0.8240 - perceptual_loss: 0.2169 - val_total_loss: 1.3450 - val_scce_loss: 1.0618 - val_perceptual_loss: 0.2832\n",
+      "Epoch 27/100\n",
+      "68/68 [==============================] - 59s 861ms/step - total_loss: 1.0051 - scce_loss: 0.7855 - perceptual_loss: 0.2197 - val_total_loss: 1.5784 - val_scce_loss: 1.2219 - val_perceptual_loss: 0.3565\n",
+      "Epoch 28/100\n",
+      "68/68 [==============================] - 59s 865ms/step - total_loss: 0.9960 - scce_loss: 0.7876 - perceptual_loss: 0.2084 - val_total_loss: 1.2024 - val_scce_loss: 0.9429 - val_perceptual_loss: 0.2595\n",
+      "Epoch 29/100\n",
+      "68/68 [==============================] - 58s 862ms/step - total_loss: 0.9263 - scce_loss: 0.7264 - perceptual_loss: 0.1999 - val_total_loss: 1.3000 - val_scce_loss: 1.0046 - val_perceptual_loss: 0.2954\n",
+      "Epoch 30/100\n",
+      "68/68 [==============================] - 69s 1s/step - total_loss: 0.9127 - scce_loss: 0.7113 - perceptual_loss: 0.2014 - val_total_loss: 0.9742 - val_scce_loss: 0.8043 - val_perceptual_loss: 0.1699\n",
+      "Epoch 31/100\n",
+      "68/68 [==============================] - 59s 872ms/step - total_loss: 0.9045 - scce_loss: 0.7161 - perceptual_loss: 0.1884 - val_total_loss: 1.1496 - val_scce_loss: 0.9545 - val_perceptual_loss: 0.1951\n",
+      "Epoch 32/100\n",
+      "68/68 [==============================] - 71s 1s/step - total_loss: 0.9155 - scce_loss: 0.7162 - perceptual_loss: 0.1993 - val_total_loss: 0.8324 - val_scce_loss: 0.6548 - val_perceptual_loss: 0.1776\n",
+      "Epoch 33/100\n",
+      "68/68 [==============================] - 59s 857ms/step - total_loss: 0.8835 - scce_loss: 0.6903 - perceptual_loss: 0.1931 - val_total_loss: 1.1009 - val_scce_loss: 0.8838 - val_perceptual_loss: 0.2171\n",
+      "Epoch 34/100\n",
+      "68/68 [==============================] - 60s 875ms/step - total_loss: 0.8709 - scce_loss: 0.6806 - perceptual_loss: 0.1903 - val_total_loss: 1.0253 - val_scce_loss: 0.8161 - val_perceptual_loss: 0.2091\n",
+      "Epoch 35/100\n",
+      "68/68 [==============================] - 59s 864ms/step - total_loss: 0.8381 - scce_loss: 0.6503 - perceptual_loss: 0.1878 - val_total_loss: 0.9986 - val_scce_loss: 0.7958 - val_perceptual_loss: 0.2028\n",
+      "Epoch 36/100\n",
+      "68/68 [==============================] - 57s 848ms/step - total_loss: 0.8053 - scce_loss: 0.6187 - perceptual_loss: 0.1866 - val_total_loss: 0.9641 - val_scce_loss: 0.7543 - val_perceptual_loss: 0.2098\n",
+      "Epoch 37/100\n",
+      "68/68 [==============================] - 70s 1s/step - total_loss: 0.7655 - scce_loss: 0.5932 - perceptual_loss: 0.1723 - val_total_loss: 0.8008 - val_scce_loss: 0.6379 - val_perceptual_loss: 0.1628\n",
+      "Epoch 38/100\n",
+      "68/68 [==============================] - 60s 885ms/step - total_loss: 0.7576 - scce_loss: 0.5878 - perceptual_loss: 0.1698 - val_total_loss: 1.0694 - val_scce_loss: 0.8561 - val_perceptual_loss: 0.2133\n",
+      "Epoch 39/100\n",
+      "68/68 [==============================] - 58s 859ms/step - total_loss: 0.7427 - scce_loss: 0.5814 - perceptual_loss: 0.1613 - val_total_loss: 1.0104 - val_scce_loss: 0.8061 - val_perceptual_loss: 0.2043\n",
+      "Epoch 40/100\n",
+      "68/68 [==============================] - 72s 1s/step - total_loss: 0.7555 - scce_loss: 0.5816 - perceptual_loss: 0.1739 - val_total_loss: 0.6807 - val_scce_loss: 0.5575 - val_perceptual_loss: 0.1232\n",
+      "Epoch 41/100\n",
+      "68/68 [==============================] - 60s 874ms/step - total_loss: 0.7335 - scce_loss: 0.5630 - perceptual_loss: 0.1705 - val_total_loss: 0.8921 - val_scce_loss: 0.6559 - val_perceptual_loss: 0.2362\n",
+      "Epoch 42/100\n",
+      "68/68 [==============================] - 60s 880ms/step - total_loss: 0.7555 - scce_loss: 0.5846 - perceptual_loss: 0.1708 - val_total_loss: 0.9936 - val_scce_loss: 0.8032 - val_perceptual_loss: 0.1904\n",
+      "Epoch 43/100\n",
+      "68/68 [==============================] - 62s 904ms/step - total_loss: 0.7020 - scce_loss: 0.5326 - perceptual_loss: 0.1694 - val_total_loss: 1.0435 - val_scce_loss: 0.8626 - val_perceptual_loss: 0.1809\n",
+      "Epoch 44/100\n",
+      "68/68 [==============================] - 56s 825ms/step - total_loss: 0.7143 - scce_loss: 0.5492 - perceptual_loss: 0.1650 - val_total_loss: 0.9192 - val_scce_loss: 0.7306 - val_perceptual_loss: 0.1886\n",
+      "Epoch 45/100\n",
+      "68/68 [==============================] - 59s 862ms/step - total_loss: 0.6581 - scce_loss: 0.4993 - perceptual_loss: 0.1589 - val_total_loss: 0.8844 - val_scce_loss: 0.7148 - val_perceptual_loss: 0.1696\n",
+      "Epoch 46/100\n",
+      "68/68 [==============================] - 58s 854ms/step - total_loss: 0.7059 - scce_loss: 0.5368 - perceptual_loss: 0.1691 - val_total_loss: 0.8607 - val_scce_loss: 0.6652 - val_perceptual_loss: 0.1956\n",
+      "Epoch 47/100\n",
+      "68/68 [==============================] - 60s 885ms/step - total_loss: 0.6616 - scce_loss: 0.4992 - perceptual_loss: 0.1625 - val_total_loss: 0.7859 - val_scce_loss: 0.5993 - val_perceptual_loss: 0.1866\n",
+      "Epoch 48/100\n",
+      "68/68 [==============================] - 58s 856ms/step - total_loss: 0.6907 - scce_loss: 0.5266 - perceptual_loss: 0.1641 - val_total_loss: 0.7386 - val_scce_loss: 0.5771 - val_perceptual_loss: 0.1615\n",
+      "Epoch 49/100\n",
+      "68/68 [==============================] - 58s 850ms/step - total_loss: 0.6786 - scce_loss: 0.5207 - perceptual_loss: 0.1579 - val_total_loss: 0.8660 - val_scce_loss: 0.6756 - val_perceptual_loss: 0.1905\n",
+      "Epoch 50/100\n",
+      "68/68 [==============================] - 59s 866ms/step - total_loss: 0.6500 - scce_loss: 0.4904 - perceptual_loss: 0.1595 - val_total_loss: 0.9529 - val_scce_loss: 0.7876 - val_perceptual_loss: 0.1652\n",
+      "Epoch 51/100\n",
+      "68/68 [==============================] - 59s 867ms/step - total_loss: 0.6456 - scce_loss: 0.4860 - perceptual_loss: 0.1597 - val_total_loss: 0.8219 - val_scce_loss: 0.6408 - val_perceptual_loss: 0.1811\n",
+      "Epoch 52/100\n",
+      "68/68 [==============================] - 58s 851ms/step - total_loss: 0.6499 - scce_loss: 0.4922 - perceptual_loss: 0.1577 - val_total_loss: 0.9868 - val_scce_loss: 0.7665 - val_perceptual_loss: 0.2203\n",
+      "Epoch 53/100\n",
+      "68/68 [==============================] - 59s 860ms/step - total_loss: 0.6506 - scce_loss: 0.4918 - perceptual_loss: 0.1588 - val_total_loss: 0.9214 - val_scce_loss: 0.7079 - val_perceptual_loss: 0.2135\n",
+      "Epoch 54/100\n",
+      "68/68 [==============================] - 58s 858ms/step - total_loss: 0.6347 - scce_loss: 0.4806 - perceptual_loss: 0.1541 - val_total_loss: 0.8942 - val_scce_loss: 0.7110 - val_perceptual_loss: 0.1832\n",
+      "Epoch 55/100\n",
+      "68/68 [==============================] - 58s 857ms/step - total_loss: 0.6371 - scce_loss: 0.4805 - perceptual_loss: 0.1566 - val_total_loss: 0.7215 - val_scce_loss: 0.5446 - val_perceptual_loss: 0.1768\n",
+      "Epoch 56/100\n",
+      "68/68 [==============================] - 71s 1s/step - total_loss: 0.6369 - scce_loss: 0.4749 - perceptual_loss: 0.1620 - val_total_loss: 0.6718 - val_scce_loss: 0.4970 - val_perceptual_loss: 0.1748\n",
+      "Epoch 57/100\n",
+      "68/68 [==============================] - 58s 860ms/step - total_loss: 0.6141 - scce_loss: 0.4598 - perceptual_loss: 0.1543 - val_total_loss: 0.7084 - val_scce_loss: 0.5567 - val_perceptual_loss: 0.1516\n",
+      "Epoch 58/100\n",
+      "68/68 [==============================] - 57s 836ms/step - total_loss: 0.6080 - scce_loss: 0.4546 - perceptual_loss: 0.1534 - val_total_loss: 0.7618 - val_scce_loss: 0.6041 - val_perceptual_loss: 0.1577\n",
+      "Epoch 59/100\n",
+      "68/68 [==============================] - 62s 902ms/step - total_loss: 0.5942 - scce_loss: 0.4447 - perceptual_loss: 0.1495 - val_total_loss: 0.9717 - val_scce_loss: 0.7586 - val_perceptual_loss: 0.2131\n",
+      "Epoch 60/100\n",
+      "68/68 [==============================] - 60s 883ms/step - total_loss: 0.5936 - scce_loss: 0.4441 - perceptual_loss: 0.1496 - val_total_loss: 1.0771 - val_scce_loss: 0.8456 - val_perceptual_loss: 0.2315\n",
+      "Epoch 61/100\n",
+      "68/68 [==============================] - 58s 846ms/step - total_loss: 0.5822 - scce_loss: 0.4330 - perceptual_loss: 0.1492 - val_total_loss: 0.8600 - val_scce_loss: 0.6515 - val_perceptual_loss: 0.2085\n",
+      "Epoch 62/100\n",
+      "68/68 [==============================] - 59s 863ms/step - total_loss: 0.5867 - scce_loss: 0.4345 - perceptual_loss: 0.1522 - val_total_loss: 0.7425 - val_scce_loss: 0.5469 - val_perceptual_loss: 0.1956\n",
+      "Epoch 63/100\n",
+      "68/68 [==============================] - 59s 861ms/step - total_loss: 0.5948 - scce_loss: 0.4452 - perceptual_loss: 0.1496 - val_total_loss: 0.6835 - val_scce_loss: 0.5311 - val_perceptual_loss: 0.1524\n",
+      "Epoch 64/100\n",
+      "68/68 [==============================] - 59s 868ms/step - total_loss: 0.5862 - scce_loss: 0.4359 - perceptual_loss: 0.1503 - val_total_loss: 0.9080 - val_scce_loss: 0.7137 - val_perceptual_loss: 0.1943\n",
+      "Epoch 65/100\n",
+      "68/68 [==============================] - 60s 876ms/step - total_loss: 0.5723 - scce_loss: 0.4196 - perceptual_loss: 0.1527 - val_total_loss: 0.7284 - val_scce_loss: 0.5590 - val_perceptual_loss: 0.1694\n",
+      "Epoch 66/100\n",
+      "68/68 [==============================] - 60s 886ms/step - total_loss: 0.6025 - scce_loss: 0.4510 - perceptual_loss: 0.1515 - val_total_loss: 0.8062 - val_scce_loss: 0.6636 - val_perceptual_loss: 0.1426\n",
+      "Epoch 67/100\n",
+      "68/68 [==============================] - 59s 865ms/step - total_loss: 0.5622 - scce_loss: 0.4138 - perceptual_loss: 0.1484 - val_total_loss: 0.7724 - val_scce_loss: 0.6222 - val_perceptual_loss: 0.1502\n",
+      "Epoch 68/100\n",
+      "68/68 [==============================] - 58s 851ms/step - total_loss: 0.5724 - scce_loss: 0.4253 - perceptual_loss: 0.1472 - val_total_loss: 0.8835 - val_scce_loss: 0.6582 - val_perceptual_loss: 0.2253\n",
+      "Epoch 69/100\n",
+      "68/68 [==============================] - 59s 870ms/step - total_loss: 0.5537 - scce_loss: 0.4057 - perceptual_loss: 0.1480 - val_total_loss: 0.8104 - val_scce_loss: 0.6378 - val_perceptual_loss: 0.1726\n",
+      "Epoch 70/100\n",
+      "68/68 [==============================] - 59s 871ms/step - total_loss: 0.5785 - scce_loss: 0.4265 - perceptual_loss: 0.1519 - val_total_loss: 0.9191 - val_scce_loss: 0.7334 - val_perceptual_loss: 0.1857\n",
+      "Epoch 71/100\n",
+      "68/68 [==============================] - 71s 1s/step - total_loss: 0.5561 - scce_loss: 0.4082 - perceptual_loss: 0.1479 - val_total_loss: 0.6120 - val_scce_loss: 0.4659 - val_perceptual_loss: 0.1461\n",
+      "Epoch 72/100\n",
+      "68/68 [==============================] - 71s 1s/step - total_loss: 0.5685 - scce_loss: 0.4172 - perceptual_loss: 0.1513 - val_total_loss: 0.5963 - val_scce_loss: 0.4445 - val_perceptual_loss: 0.1518\n",
+      "Epoch 73/100\n",
+      "68/68 [==============================] - 59s 867ms/step - total_loss: 0.5510 - scce_loss: 0.4044 - perceptual_loss: 0.1466 - val_total_loss: 0.8741 - val_scce_loss: 0.6902 - val_perceptual_loss: 0.1839\n",
+      "Epoch 74/100\n",
+      "68/68 [==============================] - 57s 846ms/step - total_loss: 0.5535 - scce_loss: 0.4037 - perceptual_loss: 0.1498 - val_total_loss: 0.8880 - val_scce_loss: 0.6975 - val_perceptual_loss: 0.1905\n",
+      "Epoch 75/100\n",
+      "68/68 [==============================] - 61s 887ms/step - total_loss: 0.5261 - scce_loss: 0.3835 - perceptual_loss: 0.1426 - val_total_loss: 0.8543 - val_scce_loss: 0.6944 - val_perceptual_loss: 0.1599\n",
+      "Epoch 76/100\n",
+      "68/68 [==============================] - 58s 853ms/step - total_loss: 0.5375 - scce_loss: 0.3911 - perceptual_loss: 0.1464 - val_total_loss: 0.7527 - val_scce_loss: 0.5830 - val_perceptual_loss: 0.1697\n",
+      "Epoch 77/100\n",
+      "68/68 [==============================] - 59s 863ms/step - total_loss: 0.5414 - scce_loss: 0.3903 - perceptual_loss: 0.1510 - val_total_loss: 0.6706 - val_scce_loss: 0.5032 - val_perceptual_loss: 0.1674\n",
+      "Epoch 78/100\n",
+      "68/68 [==============================] - 59s 858ms/step - total_loss: 0.5343 - scce_loss: 0.3869 - perceptual_loss: 0.1474 - val_total_loss: 0.8221 - val_scce_loss: 0.6492 - val_perceptual_loss: 0.1729\n",
+      "Epoch 79/100\n",
+      "68/68 [==============================] - 57s 827ms/step - total_loss: 0.5400 - scce_loss: 0.3973 - perceptual_loss: 0.1427 - val_total_loss: 0.7559 - val_scce_loss: 0.6170 - val_perceptual_loss: 0.1389\n",
+      "Epoch 80/100\n",
+      "68/68 [==============================] - 59s 860ms/step - total_loss: 0.5392 - scce_loss: 0.3913 - perceptual_loss: 0.1479 - val_total_loss: 0.8336 - val_scce_loss: 0.6365 - val_perceptual_loss: 0.1970\n",
+      "Epoch 81/100\n",
+      "68/68 [==============================] - 57s 837ms/step - total_loss: 0.5296 - scce_loss: 0.3872 - perceptual_loss: 0.1424 - val_total_loss: 0.8230 - val_scce_loss: 0.6547 - val_perceptual_loss: 0.1683\n",
+      "Epoch 82/100\n",
+      "68/68 [==============================] - 57s 831ms/step - total_loss: 0.5492 - scce_loss: 0.4028 - perceptual_loss: 0.1465 - val_total_loss: 0.8629 - val_scce_loss: 0.6737 - val_perceptual_loss: 0.1892\n",
+      "Epoch 83/100\n",
+      "68/68 [==============================] - 70s 1s/step - total_loss: 0.5362 - scce_loss: 0.3855 - perceptual_loss: 0.1506 - val_total_loss: 0.5171 - val_scce_loss: 0.4014 - val_perceptual_loss: 0.1158\n",
+      "Epoch 84/100\n",
+      "68/68 [==============================] - 59s 868ms/step - total_loss: 0.5257 - scce_loss: 0.3875 - perceptual_loss: 0.1382 - val_total_loss: 0.8032 - val_scce_loss: 0.6090 - val_perceptual_loss: 0.1942\n",
+      "Epoch 85/100\n",
+      "68/68 [==============================] - 58s 853ms/step - total_loss: 0.5034 - scce_loss: 0.3594 - perceptual_loss: 0.1440 - val_total_loss: 0.7072 - val_scce_loss: 0.5280 - val_perceptual_loss: 0.1791\n",
+      "Epoch 86/100\n",
+      "68/68 [==============================] - 58s 847ms/step - total_loss: 0.5349 - scce_loss: 0.3874 - perceptual_loss: 0.1476 - val_total_loss: 0.8432 - val_scce_loss: 0.6459 - val_perceptual_loss: 0.1972\n",
+      "Epoch 87/100\n",
+      "68/68 [==============================] - 58s 856ms/step - total_loss: 0.5184 - scce_loss: 0.3725 - perceptual_loss: 0.1459 - val_total_loss: 0.8022 - val_scce_loss: 0.6272 - val_perceptual_loss: 0.1750\n",
+      "Epoch 88/100\n",
+      "68/68 [==============================] - 60s 882ms/step - total_loss: 0.5178 - scce_loss: 0.3745 - perceptual_loss: 0.1433 - val_total_loss: 0.7736 - val_scce_loss: 0.5867 - val_perceptual_loss: 0.1869\n",
+      "Epoch 89/100\n",
+      "68/68 [==============================] - 59s 865ms/step - total_loss: 0.5302 - scce_loss: 0.3846 - perceptual_loss: 0.1456 - val_total_loss: 0.8012 - val_scce_loss: 0.6238 - val_perceptual_loss: 0.1774\n",
+      "Epoch 90/100\n",
+      "68/68 [==============================] - 58s 846ms/step - total_loss: 0.5057 - scce_loss: 0.3631 - perceptual_loss: 0.1425 - val_total_loss: 0.8471 - val_scce_loss: 0.6589 - val_perceptual_loss: 0.1882\n",
+      "Epoch 91/100\n",
+      "68/68 [==============================] - 59s 859ms/step - total_loss: 0.5277 - scce_loss: 0.3803 - perceptual_loss: 0.1474 - val_total_loss: 0.9092 - val_scce_loss: 0.7368 - val_perceptual_loss: 0.1725\n",
+      "Epoch 92/100\n",
+      "68/68 [==============================] - 61s 886ms/step - total_loss: 0.5173 - scce_loss: 0.3733 - perceptual_loss: 0.1439 - val_total_loss: 0.7760 - val_scce_loss: 0.6138 - val_perceptual_loss: 0.1622\n",
+      "Epoch 93/100\n",
+      "68/68 [==============================] - 59s 863ms/step - total_loss: 0.5237 - scce_loss: 0.3790 - perceptual_loss: 0.1446 - val_total_loss: 0.7773 - val_scce_loss: 0.6143 - val_perceptual_loss: 0.1631\n",
+      "Epoch 94/100\n",
+      "68/68 [==============================] - 60s 877ms/step - total_loss: 0.4961 - scce_loss: 0.3509 - perceptual_loss: 0.1452 - val_total_loss: 0.6008 - val_scce_loss: 0.4598 - val_perceptual_loss: 0.1410\n",
+      "Epoch 95/100\n",
+      "68/68 [==============================] - 58s 855ms/step - total_loss: 0.4899 - scce_loss: 0.3502 - perceptual_loss: 0.1396 - val_total_loss: 0.8288 - val_scce_loss: 0.6481 - val_perceptual_loss: 0.1807\n",
+      "Epoch 96/100\n",
+      "68/68 [==============================] - 58s 857ms/step - total_loss: 0.5040 - scce_loss: 0.3590 - perceptual_loss: 0.1451 - val_total_loss: 0.8035 - val_scce_loss: 0.6382 - val_perceptual_loss: 0.1652\n",
+      "Epoch 97/100\n",
+      "68/68 [==============================] - 57s 839ms/step - total_loss: 0.5223 - scce_loss: 0.3747 - perceptual_loss: 0.1476 - val_total_loss: 0.8042 - val_scce_loss: 0.6304 - val_perceptual_loss: 0.1738\n",
+      "Epoch 98/100\n",
+      "68/68 [==============================] - 60s 876ms/step - total_loss: 0.5121 - scce_loss: 0.3658 - perceptual_loss: 0.1463 - val_total_loss: 0.6358 - val_scce_loss: 0.4887 - val_perceptual_loss: 0.1471\n",
+      "Epoch 99/100\n",
+      "68/68 [==============================] - 62s 905ms/step - total_loss: 0.4899 - scce_loss: 0.3468 - perceptual_loss: 0.1431 - val_total_loss: 0.7575 - val_scce_loss: 0.5894 - val_perceptual_loss: 0.1682\n",
+      "Epoch 100/100\n",
+      "68/68 [==============================] - 59s 865ms/step - total_loss: 0.5091 - scce_loss: 0.3649 - perceptual_loss: 0.1442 - val_total_loss: 0.7331 - val_scce_loss: 0.5624 - val_perceptual_loss: 0.1707\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f2b3c385250>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
