Add possibility to change how the remaining number of frames is given via the config file

--- a/notebooks/model/vq-gan/min_gpt-huggingface_experimental_6.ipynb
+++ b/notebooks/model/vq-gan/min_gpt-huggingface_experimental_6.ipynb
@@ -2919,7 +2919,18 @@
       "Epoch 603/2000\n",
       "68/68 [==============================] - 421s 6s/step - total_loss: 0.3389 - scce_loss: 0.1644 - perceptual_loss: 0.1745 - val_total_loss: 1.2319 - val_scce_loss: 0.7664 - val_perceptual_loss: 0.4655\n",
       "Epoch 604/2000\n",
-      "65/68 [===========================>..] - ETA: 17s - total_loss: 0.3378 - scce_loss: 0.1630 - perceptual_loss: 0.1749"
+      "68/68 [==============================] - 419s 6s/step - total_loss: 0.3359 - scce_loss: 0.1627 - perceptual_loss: 0.1732 - val_total_loss: 1.0443 - val_scce_loss: 0.6821 - val_perceptual_loss: 0.3622\n",
+      "Epoch 605/2000\n",
+      "68/68 [==============================] - 419s 6s/step - total_loss: 0.3351 - scce_loss: 0.1629 - perceptual_loss: 0.1723 - val_total_loss: 1.1686 - val_scce_loss: 0.6953 - val_perceptual_loss: 0.4733\n",
+      "Epoch 606/2000\n",
+      "68/68 [==============================] - 421s 6s/step - total_loss: 0.3437 - scce_loss: 0.1666 - perceptual_loss: 0.1770 - val_total_loss: 1.5065 - val_scce_loss: 0.8939 - val_perceptual_loss: 0.6127\n",
+      "Epoch 607/2000\n",
+      "68/68 [==============================] - 424s 6s/step - total_loss: 0.3387 - scce_loss: 0.1665 - perceptual_loss: 0.1721 - val_total_loss: 1.2404 - val_scce_loss: 0.7189 - val_perceptual_loss: 0.5215\n",
+      "Epoch 608/2000\n",
+      "68/68 [==============================] - 428s 6s/step - total_loss: 0.3415 - scce_loss: 0.1690 - perceptual_loss: 0.1726 - val_total_loss: 1.3629 - val_scce_loss: 0.7333 - val_perceptual_loss: 0.6296\n",
+      "Epoch 609/2000\n",
+      "68/68 [==============================] - 430s 6s/step - total_loss: 0.3548 - scce_loss: 0.1738 - perceptual_loss: 0.1809 - val_total_loss: 1.0592 - val_scce_loss: 0.7116 - val_perceptual_loss: 0.3476\n",
+      "Epoch 610/2000\n"
      ]
     }
    ],
